--- a/fess-crawler/pom.xml
+++ b/fess-crawler/pom.xml
@@ -262,9 +262,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty</artifactId>
-      <version>6.1.26</version>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-maven-plugin</artifactId>
+      <version>9.3.10.v20160621</version>
       <scope>test</scope>
     </dependency>
     <dependency>
